get all the component tree working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-
-<!--<login></login>-->
-<h1>hhhh</h1>
-<login></login>
+<!--
 <lendings></lendings>
+<returnings></returnings>
+-->
+<book-status></book-status>
