--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,6 @@
 <returnings></returnings>
 -->
 <book-status></book-status>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+ 
