route-outlet and nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,31 @@
 <!--
 <lendings></lendings>
 <returnings></returnings>
--->
 <book-status></book-status>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<book-managment></book-managment>
+<internal-book-mangment></internal-book-mangment>-->
+
+<!-- <router-outlet></router-outlet>
+<nav>
+    <a routerLink="lendings" routerLinkActive="current">Lendings</a>
+    <a routerLink="returnings" routerLinkActive="current">Returnings</a>
+    <a routerLink="bookStatus" routerLinkActive="current">Book Status</a>
+    <a routerLink="bookManagment" routerLinkActive="current">Book Managment</a>
+  </nav>
+  <router-outlet name="homeNavigation"></router-outlet> -->
+
+
+  <!--<nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Logo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a [routerLink]="['/home-page', {outlets: {homeNavigation:}}]">Secondscreen</a></li>
+        
+      </ul>
+    </div>
+  </nav>-->
+  
+  <router-outlet></router-outlet>
+
 
  
