--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,29 +3,9 @@
 <returnings></returnings>
 <book-status></book-status>
 <book-managment></book-managment>
-<internal-book-mangment></internal-book-mangment>-->
-
-<!-- <router-outlet></router-outlet>
-<nav>
-    <a routerLink="lendings" routerLinkActive="current">Lendings</a>
-    <a routerLink="returnings" routerLinkActive="current">Returnings</a>
-    <a routerLink="bookStatus" routerLinkActive="current">Book Status</a>
-    <a routerLink="bookManagment" routerLinkActive="current">Book Managment</a>
-  </nav>
-  <router-outlet name="homeNavigation"></router-outlet> -->
+<internal-book-mangment></internal-book-mangment>
+<redears-managment></redears-managment> <login></login>-->
 
 
-  <!--<nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a [routerLink]="['/home-page', {outlets: {homeNavigation:}}]">Secondscreen</a></li>
-        
-      </ul>
-    </div>
-  </nav>-->
-  
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
 
-
- 
